[gd_scene load_steps=3 format=3 uid="uid://pkc4jllcxrqt"]

[ext_resource type="Theme" uid="uid://dr33k4lxxp4rf" path="res://resources/main_theme.tres" id="1_nj2j7"]
[ext_resource type="Script" path="res://scenes/multiplayer_match/multiplayer_match.gd" id="2_ci80u"]

[node name="MultiplayerMatch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nj2j7")
script = ExtResource("2_ci80u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Total: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Points" type="Label" parent="Panel/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="WordContainer" type="AspectRatioContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
